# vocational-training

./: LICENSE  README.md
cpp-projects/: .gitignore  CMakeLists.txt  README.md
cpp-projects/AufgabeFrachtFunktionen/: Funktionen.cpp
cpp-projects/AufgabenoffSchleifeQuersummeRechner/: Quersumme.cpp  Rechner.cpp
cpp-projects/BubbleSort/: BubbleSort.cpp
cpp-projects/DatumWochen/: AufgabeDatumWochentag.cpp
cpp-projects/DatumWochen/Headers/: Eingaben.h
cpp-projects/Eingabenlesen/: Eingabenlesen.cpp
cpp-projects/First Year/Angebotskalkulation/: Angebotskalkulation.cpp  Eingaben.cpp  Kalkulation.cpp
cpp-projects/First Year/Angebotskalkulation/Headers/: Eingaben.h  Kalkulation.h
cpp-projects/First Year/Array/: ArrayAufgabeOmar.cpp
cpp-projects/First Year/BerechnungenFunktionen/: BerechnungenFunktionen.cpp
cpp-projects/First Year/DatumWochen/: Eingaben.cpp
cpp-projects/First Year/DatumWochen/Headers/: DatumHelper.h
cpp-projects/First Year/Forschleife/: forschleife.cpp
cpp-projects/First Year/FrachtBerechnung/: AufgabeFrachtFunktionen.doc
cpp-projects/First Year/Funktionen/: Funktionen.cpp
cpp-projects/First Year/Gehalt/: AufgabeGehalt.cpp
cpp-projects/First Year/Klausuren/Erste Klausur/: ersteKlausur.cpp  ersteKlausurLoesung.cpp
cpp-projects/First Year/Klausuren/Zweite Klausur/: Quersumme.cpp  QuersummeLoesung.cpp  QuersummeRekursion.cpp  QuersummeRekursionLoesung.cpp  SummeRekursion.cpp  zweiteKlausur.cpp  zweiteKlausurLoesung.cpp
cpp-projects/First Year/Klausuren/Zweite Klausur/Headers/: Quersumme.h  QuersummeLoesung.h
cpp-projects/First Year/OffeneSchleife/: Lottospieler.cpp  Million.cpp
cpp-projects/First Year/RekursiveFunktionen/: RekursiveFunktionen.cpp
cpp-projects/First Year/Umsatzzuwachstum/: Umsatzzuwachstum.cpp  Versicherungsvertreter.cpp
cpp-projects/First Year/Wetter/: Wetter.cpp
cpp-projects/First Year/Zeichnenkette/: ZeichnenKette.cpp
cpp-projects/First Year/offSchleifeQuersummeRechner/: Quersumme.cpp
cpp-projects/FrachtBerechnung/: Fracht.cpp
cpp-projects/FrachtFunktionen/: Funktionen.cpp
cpp-projects/Gehalt/: AufgabeGehalt.cpp
cpp-projects/Reisekosten/: Reisekosten.cpp
cpp-projects/SchaltjahrDatum/: SchaltjahrDatum.cpp
cpp-projects/Tannenbaum/: Tannenbaum.cpp
cpp-projects/Zinseszins/: Zinseszins.cpp
